Desktop/heruko 2/Farzi/force-app/main/default/objects/Vehicle__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <label>CreateDate</label>
    <type>Date</type>
</CustomField>