Desktop/heruko 2/Farzi/force-app/main/default/objects/Vehicle__c/recordTypes/Hatch.recordType-meta.xml
<RecordType>
    <fullName>Hatch</fullName>
    <active>true</active>
    <label>Hatch</label>
</RecordType>