Desktop/heruko 2/Farzi/force-app/main/default/objects/Vehicle__c/recordTypes/SUV.recordType-meta.xml
<RecordType>
    <fullName>SUV</fullName>
    <active>true</active>
    <label>SUV</label>
</RecordType>