Desktop/heruko 2/Farzi/force-app/main/default/objects/Vehicle__c/listViews/Sales_Queue_Vehicle.listView-meta.xml
<ListView>
    <fullName>Sales_Queue_Vehicle</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Queue</label>
    <queue>Sales_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>